2016-06-22  Edward Hart <edward.dan.hart@gmail.com>

	* parser.y, error.c: added hints to change dialect if an undefined word
	  is used which is reserved in another dialect (see Wish List #107).
	* parser.y (_identification_header): reinstate ID DIVISION option.
	* parser.y (set_up_program): fixed bug #255, where function could be
	  defined within a program.

2016-06-21  Ron Norman <rjn@inglenet.com>

	* error.c (print_error): fixed to verify 'file' is NOT NULL before using it
	* cobc.c: FR #138 added checks for some env vars which are not allowed to
	  have PATHSEP_CHAR in them

2016-06-20  Dave Pitts <dpitts@cozx.com>

	* cobc.*, error.c, pplex.l, ppparse.y : Added support for compiler
	  listings.


2016-06-20  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* codegen.c (output_internal_function): fixing bug #234 segfault by
	  generating code for setting not passed parameter pointers to NULL as if
	  they would have been passed as OMITTED, allowing (cob_is_omitted) to work

2016-06-18  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* ppparse.def: Added compiler constants GNUCOBOL (alias for OPENCOBOL)
	  and GCCOMP (alias for OCCOMP)

2016-06-15 Brian Tiffin <btiffin@gnu.org>

	* cobc.c: Added optional arguments for -j job submits and -job alias

2016-06-14  Edward Hart <edward.dan.hart@gmail.com>

	* reserved.c (default_reserved_words): moved uncommon, non-standard
	  aliases (e.g., AUTOTERMINATE for AUTO) to config files.
	* parser.y: renamed TIMEOUT token to TIME-OUT.

2016-06-13  Simon 'sf-mensch/human' Sobisch <simonsobisch@gnu.org>

	* pplex.l (ppinput): FR #126 treat invalid indicator (free format) as
	  line comment instead of aborting compilation
	* typeck.c (cb_validate_program_environment): FR #67 output duplicate values
	  in errornous alphabet-names at correct error position

2016-06-12  Edward Hart <edward.dan.hart@gmail.com>

	* tree.c (cb_build_picture): fixed bug where PIC SS9 was not detected as